<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NavigationActivity">

    <View
        android:layout_width="1dp"
        android:layout_height="400dp"
        android:background="@color/colorPrimary"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/section1"
            style="@style/NavSection"
            android:text="@string/section1_title"/>
        <Button
            android:id="@+id/section2"
            style="@style/NavSection"
            android:text="@string/section2_title"/>
        <Button
            android:id="@+id/section3"
            style="@style/NavSection"
            android:text="@string/section3_title"/>
        <Button
            android:id="@+id/section4"
            style="@style/NavSection"
            android:text="@string/section4_title"/>
        <Button
            android:id="@+id/section5"
            style="@style/NavSection"
            android:text="@string/section5_title"/>
    </LinearLayout>

</RelativeLayout>
